src/test/contracts/negative/deep_pattern_matching/pm_test6.religo
let t = (x : list(int)) =>
  switch(x) {
  | a           => 0
  | [hd, ...tl] => 0
  }